--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-tJZlcUrInZ mbr-fullscreen mbr-parallax-background" id="header1-1">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-tJZlcUrInZ mbr-fullscreen mbr-parallax-background" id="header1-1">
 
     
 
@@ -160,9 +160,7 @@
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Ashima Jain</strong></h5>
                         <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                             <strong>Founder</strong></h6>
-                        <p class="card-text mbr-fonts-style align-center display-7">
-                            No special actions required, all sites you make with Mobirise are mobile-friendly.
-                        </p>
+                        <p class="card-text mbr-fonts-style align-center display-7">Ashima Jain, a delhi university mathematics graduate and an MBA who possesses an innate ability  to connect with parents and children alike.Being an academician herself and having forayed into this education industry in depth,she carries a unique vision of aligning the interests of a coach ,students and parents into generation of exemplary results by tapping the latent potential of each child.The core value behind inception of“Pedagogue” is to maximise quality education so as to provide optimum headstart to a child’s career and metamorphosise his entire personality.<br></p>
                         <div class="social-row display-7">
                             <div class="soc-item">
                                 <a href="https://www.facebook.com/Mobirise/" target="_blank">
@@ -192,7 +190,7 @@
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Gurmukh Singh</strong></h5>
                         <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>Co-Founder</strong></h6>
                         <p class="card-text mbr-fonts-style align-center display-7">
-                            Use Mobirise website building software to create multiple sites for your clients.
+                            Gurmukh Singh, an IIMK  graduate, a passionate coach with over 15 years of experience in coaching for SAT, ACT, GMAT, GRE etc. His unique ability to spontaneously develop  sums in a class to drive home concept clarity in students make the students quite involved and confident in class. He is known among his students to be easily approachable for clearing doubts and making  mathematics learning a fun activity. He covers mathematics syllabus extensively and takes up all level of questions in class for the better handling of  adaptive testing.
                         </p>
                         <div class="social-row display-7">
                             <div class="soc-item">
@@ -225,7 +223,7 @@
                         <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
                             <strong>Faculty</strong></h6>
                         <p class="card-text mbr-fonts-style align-center display-7">
-                            Create multiple pages. Don't forget to set links to your pages after creating them.
+                            Mansi Jain, presents a quintessential image of a mentor, guide and subject matter expert- all rolled into one. Being a grandlioquent rhetoric, she takes teaching and mentoring extremely close to her heart. Mansi carries a rich experience of more than 10 years of teaching across SAT, ACT, GMAT etc. She is an enthusiast for life and spends her time in reading and exploring newer places. She has  developed a unique pedagogy after inductive research to drive home learning to students precisely and crisply. She is sympathetic by heart, a keen listener and has impeccable language skill.
                         </p>
                         <div class="social-row display-7">
                             <div class="soc-item">
@@ -376,7 +374,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -394,7 +392,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ve3+RGP03rfN5nI1LFqVtFmmectzt5L1+8e2RqCDcOe7xIIB072nmBPwUa2j6OJMESFzIDXGnE7aFOittiseUjrwvJBhJjnYtHlx4QLyfN48dRSnfwAxm1wVw3DvdTtm">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="r/Mq2KWq8AEARXf+7eRHIB4lYZvLzmddycgHgq2GQbWdrq+6hCD2xkWB6dnZShl4vmdRpwKKV6jASoygZkwml6505OzLVdgMet08vexCz/hKA0owonX/uVBH6wLUvQ6Z">
                     <p class="mbr-text mbr-fonts-style align-center mb-4 display-7">
                         One of our team will be in contact with you shortly.
                     </p>
